--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   intl: ^0.15.7
 
   # Firestore plugin
-  cloud_firestore: ^0.8.2+1
+  cloud_firestore: ^0.8.2+3
+
+  # Test
+  test: ^1.5.1+1
 
 dev_dependencies:
   flutter_test:
